--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <img src="./assets/img/Luthier.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Harpye Lutherie</h5>
-                                <p class="card-text">Fabricant de guitares</p>
+                                <p class="card-text">Fabricant de guitares (Site en cours)</p>
                                 <a href="https://www.facebook.com/harpye.lutherie/" class="btn btn-success">En savoir +</a>
                             </div>
                         </div>
