--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Harpye Lutherie</h5>
                                 <p class="card-text">Fabricant de guitares (Site en cours)</p>
-                                <a href="https://www.facebook.com/harpye.lutherie/" class="btn btn-success">En savoir +</a>
+                                <a href="https://www.facebook.com/harpye.lutherie/" target="_blank" class="btn btn-success">En savoir +</a>
                             </div>
                         </div>
                     </div>
