--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <div class="col-12">
                     <h1 class="col-lg-12 col-md-6 col-sm-6 firstTitle text-center">
                         <div class="row justify-content-start">
-                            <span class="col-lg-6 col-md-6 col-sm-6">Max</span>
+                            <span class="col- 12 col-lg-6 col-md-6 col-sm-6">Max</span>
                         </div>
                         <div class="row justify-content-center">
-                            <span class="col-lg-6 col-md-6 col-sm-3">Blanck</span>
+                            <span class="col-12 col-lg-6 col-md-6 col-sm-3">Blanck</span>
                         </div>
                     </h1>
                     <h2>
@@ -207,9 +207,9 @@
                             <li><span class="title">Address : </span><span class="value">Rue Ancel. 60200
                                     Compiègne</span>
                             </li>
-                            <li><span class="title">e-mail : </span><span class="value"><a
-                                        href="mailto:maxblanck@outlook.fr">maxblanck@outlook.fr</a></span></li>
-                            <li><span class="title">Phone : </span><span class="phone bg-success rounded p-2">+33 6 89 67 28 86</span></li>
+                            <li><span class="title">e-mail : </span><a
+                                        href="mailto:maxblanck@outlook.fr" class="mail p-2">maxblanck@outlook.fr</a></li>
+                            <li><span class="title">Phone : </span><span class="phone bg-success rounded p-1 my-2">+33 6 89 67 28 86</span></li>
                             <li><span class="title">LinkedIn : </span><span class="value"><a
                                         href="https://www.linkedin.com/in/max-blanck-7647301b9/" target="_blank"
                                         title="Aller vers LinkedIn"><i class="fab fa-linkedin fa-1x"></i></a></span>
