--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
                             <div class="card-body">
                                 <h5 class="card-title">Harpye Lutherie</h5>
                                 <p class="card-text">Fabricant de guitares (Site en cours)</p>
-                                <a href="https://www.facebook.com/harpye.lutherie/" target="_blank" class="btn btn-success">En savoir +</a>
+                                <a href="https://www.facebook.com/harpye.lutherie/" target="_blank"
+                                    class="btn btn-success">En savoir +</a>
                             </div>
                         </div>
                     </div>
@@ -147,7 +148,8 @@
                             <div class="card-body">
                                 <h5 class="card-title">Calendrier interactif</h5>
                                 <p class="card-text">Réalisé en PHP</p>
-                                <a href="https://github.com/MaBlanck/calendar" class="btn btn-success">CaLeNdRiEr</a></button>
+                                <a href="https://github.com/MaBlanck/calendar"
+                                    class="btn btn-success">CaLeNdRiEr</a></button>
                             </div>
                         </div>
                     </div>
@@ -207,9 +209,10 @@
                             <li><span class="title">Address : </span><span class="value">Rue Ancel. 60200
                                     Compiègne</span>
                             </li>
-                            <li><span class="title">e-mail : </span><a
-                                        href="mailto:maxblanck@outlook.fr" class="mail p-2">maxblanck@outlook.fr</a></li>
-                            <li><span class="title">Phone : </span><span class="phone bg-success rounded p-1 my-2">+33 6 89 67 28 86</span></li>
+                            <li><span class="title">e-mail : </span><a href="mailto:maxblanck@outlook.fr"
+                                    class="mail p-2">maxblanck@outlook.fr</a></li>
+                            <li><span class="title">Phone : </span><span class="phone bg-success rounded p-1 my-2">+33 6
+                                    89 67 28 86</span></li>
                             <li><span class="title">LinkedIn : </span><span class="value"><a
                                         href="https://www.linkedin.com/in/max-blanck-7647301b9/" target="_blank"
                                         title="Aller vers LinkedIn"><i class="fab fa-linkedin fa-1x"></i></a></span>
@@ -221,7 +224,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6 col-md-4 d-inline-block">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                         <h4>Développement Web</h4>
                         <p class="paragraph rounded p-3">Le développement web est le premier chemin que
                             j'explore dans le vaste monde du développement informatique. <br>
@@ -232,7 +235,7 @@
                             Mais je suis pas contre l'ouverture de ce cercle de copains.
                         </p>
                     </div>
-                    <div class="col-md-4 h-100">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-4 h-100">
                         <div class="col-12 h-100">
                             <h4>Managing</h4>
                             <p class="paragraph rounded p-3">Parmis toutes mes expériences professionnelles,
@@ -244,7 +247,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center h-100">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-4 h-100">
                         <div class="col-12 h-100">
                             <h4>Créativité</h4>
                             <p class="paragraph rounded p-3">J'ai été musicien semi-professionnel, je n'ai
@@ -284,39 +287,10 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col text-center p-3">
-                        <h4>Infos Fun</h4>
+                    <div class="download-cv-block col-sm-12 col-md-12 text-center mb-5 mt-5">
+                        <a class="btn btn-success" target="_blank" href="./assets/img/Cv-WebDeveloppeur.png">Télécharger
+                            CV</a></button>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6 col-md-4 subpage-block text-center">
-                        <div class="fun-fact-block">
-                            <i class=""></i>
-                            <h4>Clients Contents</h4>
-                            <p class="fun-value">Vous un jour</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4 subpage-block text-center"
-                        style="will-change: transform; transform: perspective(300px) rotateX(0deg) rotateY(0deg);">
-                        <div class="fun-fact-block">
-                            <i class="pe-7s-icon pe-7s-alarm"></i>
-                            <h4>Heures Travaillées</h4>
-                            <p class="fun-value">En cours de comptage</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-4 subpage-block text-center"
-                        style="will-change: transform; transform: perspective(300px) rotateX(0deg) rotateY(0deg);">
-                        <div class="fun-fact-block text-center">
-                            <i class="pe-7s-icon pe-7s-coffee"></i>
-                            <h4>Cafés consommés</h4>
-                            <p class="fun-value">Demandez à mon dentiste</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="download-cv-block col-sm-12 col-md-12 text-center mb-5 mt-5">
-                    <a class="btn btn-success" target="_blank"
-                            href="./assets/img/Cv-WebDeveloppeur.png">Télécharger CV</a></button>
-
                 </div>
             </div>
         </section>
