--- a/index.html
+++ b/index.html
@@ -233,6 +233,13 @@
                             Javascript, php, MySql et les pionnier HTML et CSS sont mes meilleurs potes
                             aujourd'hui. <br>
                             Mais je suis pas contre l'ouverture de ce cercle de copains.
+                        <blockquote>
+                            "Ne t'occupe pas d'être moderne. C'est l'unique chose que malheureusement, quoi que tu
+                            fasses, tu ne pourras pas éviter
+                            d'être."
+                            <cite>Les Cocus du vieil art moderne (1956)</cite>
+                            <footer>Salavdor Dali</footer>
+                        </blockquote>
                         </p>
                     </div>
                     <div class="col-12 col-sm-12 col-md-6 col-lg-4 h-100">
@@ -242,8 +249,11 @@
                                 j'ai toujours été ammené à un moment donné à gérer et manager des personnes.
                                 <br>
                                 J'aime ça, car je peux mettre en pratique ma vision du groupe. <br>
-                                A l'écoute de tous, ouvert aux dialogues, tolérance complète. Seul on va plus
-                                vite. A plusieurs on va plus loin. <br>
+                                A l'écoute de tous, ouvert aux dialogues, tolérance complète.
+                            <blockquote>
+                                "Seul on va plus vite. A plusieurs, on est ralenti"
+                                <footer>Chuck Norris</footer>
+                            </blockquote>
                             </p>
                         </div>
                     </div>
@@ -284,6 +294,12 @@
                             style="color: #d0b792" title="When i'm not reading documentation..." target="_blank"><i
                                 class="fas fa-book fa-3x icon"></i></a>
                         <p><br>Literature</p>
+                        <p><blockquote>
+                            "Ah, la vie ! Tragédie douce-amère, ô putain mirobolante qui m'a aveuglé et conduit à ma
+                            perte !" <br>
+                            <cite>Demande à la poussière (1939)</cite>
+                            <footer>John Fante</footer>
+                        </blockquote></p>
                     </div>
                 </div>
                 <div class="row">
