--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="row ">
                     <div class="col-12  my-5 text-center">
-                        <h4>FRONT-END</h4>
+                        <h4 class="skillsTitle">FRONT-END</h4>
                     </div>
                 </div>
                 <div class="row justify">
@@ -75,7 +75,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 my-5 text-center">
-                        <h4>BACK-END</h4>
+                        <h4 class="skillsTitle">BACK-END</h4>
                     </div>
                 </div>
                 <div class="row">
@@ -94,17 +94,26 @@
                 </div>
                 <div class="row my-5">
                     <div class="col-12 col-md-6 text-center">
-                        <h4>Versionning</h4>
+                        <h4 class="skillsTitle">VERSIONNING</h4>
                         <i class="fab fa-git fa-3x mt-2"></i>
                         <p>GitHub</p>
                         <p><span class="dot"></span><span class="dot"></span><span class="dot"></span><span
                                 class="dot-off"></span><span class="dot-off"></span></p>
                     </div>
                     <div class="col-12 col-md-6 text-center">
-                        <h4>Environnement de développement</h4>
+                        <h4 class="skillsTitle">ENVIRONNEMENT DE DEVELOPPEMENT</h4>
                         <p>Visual Studio Code</p>
                         <p><span class="dot"></span><span class="dot"></span><span class="dot"></span><span
                                 class="dot"></span><span class="dot-off"></span></p>
+                    </div>
+                </div>
+                <div class="row my-5">
+                    <div class="class col-12 col-md-12 text-center">
+                        <h4 class="skillsTitle">CMS</h4>
+                        <p>Wordpress</p>
+                        <i class="fab fa-wordpress-simple"></i>
+                        <p class="my-3"><span class="dot"></span><span class="dot"></span><span class="dot-off"></span><span class="dot-off"></span><span
+                                class="dot-off"></span></p>
                     </div>
                 </div>
             </div>
