--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
         <div class="container-fluid parallax">
             <div class="d-flex flex-wrap" style="height:200px">
                 <div class="col-12">
-                    <h1 class="col-lg-12 col-md-6 col-sm-6 firstTitle text-center">
+                    <h1 class="accessibility">Max Blanck Web Developer</h1>
+                    <h2 class="col-lg-12 col-md-6 col-sm-6 mt-5 firstTitle text-center">
                         <div class="row justify-content-start">
                             <span class="col- 12 col-lg-6 col-md-6 col-sm-6">Max</span>
                         </div>
                         <div class="row justify-content-center">
                             <span class="col-12 col-lg-6 col-md-6 col-sm-3">Blanck</span>
                         </div>
-                    </h1>
+                    </h2>
                     <h2>
                         <div class="row justify-content-end">
                             <span class="col-lg-6 col-md-6 col-sm-6 text-center pt-5">Développeur <span
